datamodel/objects/Contract/fields/Count_Not_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Count_Not_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Count Not Accepted</label>
    <type>Checkbox</type>
</CustomField>