datamodel/objects/Contract/fields/Minimum_Stars__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stars__c</fullName>
    <label>Minimum Stars</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RatingPicklist</valueSetName>
    </valueSet>
</CustomField>