datamodel/objects/Contract/fields/Visible_Not_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Visible_Not_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible Not Accepted</label>
    <type>Checkbox</type>
</CustomField>